--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,11 @@
 			<version>2.0.9</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+	        <groupId>mysql</groupId>
+	        <artifactId>mysql-connector-java</artifactId>
+	        <version>8.0.33</version>
+        </dependency>
 	</dependencies>
 
 	<build>
